# OIDA

./: LICENSE  README.md
code/: Makefile  README  client.c  fp2.c  fp2.h  leak_OPRF_key_csidh.py  mont.c  mont.h  network-utils.h  networked.c  opus.c  prf.c  server.c  updatable.c
code/mobile_psi_cpp/: Readme.md
code/mobile_psi_cpp/droidCrypto/: CMakeLists.txt
code/mobile_psi_cpp/droidCrypto/psi/: ECNRPSIServerPreprocess.cpp  ECNRPSIServerPreprocess.h
code/mobile_psi_cpp/droidCrypto/psi/tools/: ECNRPRF.cpp  ECNRPRF.h
code/mobile_psi_cpp/droidCrypto/relic/src/md/: blake2.h
code/mobile_psi_cpp/droidCrypto/tests/: CMakeLists.txt  test_ECNR_preprocess.cpp  test_psi_oprf_ecnr_preprocess.cpp
code/nr-ot/: .gitignore  CMakeLists.txt  README.md  bench_psi.py
code/nr-ot/CSI-FiSh/: CMakeLists.txt  fp.h  gpt.c  main  main.c  mont.h  parameters.h  reduce.c  test.c  uint.h
code/nr-ot/CSI-FiSh/p512/: params.h
code/nr-ot/emp-tool/io/: net-io.h
code/nr-ot/test/: CMakeLists.txt  oprf_client.cpp  oprf_server.cpp  prf_opt.cpp  psi_client.cpp  psi_server.cpp  test_oprf_nrot_client.cpp  test_oprf_nrot_server.cpp  test_psi_nrot_client.cpp  test_psi_nrot_server.cpp
code/opaque/: README.md  bench.py
code/opaque/CSI-FiSh/implementation/: Makefile  bench.c  constants.h  csidh.c  csidh.h  csifish.c  csifish.h  disttest.c  fp.c  main.c  merkletree.c  merkletree.h  mont.c  mont.h  rng.c  rng.h  uint.c  uint.h
code/opaque/CSI-FiSh/implementation/p512/: constants.c
code/opaque/csidh/: csidh.c  fp.h
code/opaque/csidh/p512/: constants.c  uint.s
code/opaque/csike/: Makefile  csike.c  csike.h  main.c
code/opaque/nr-oprf/: CMakeLists.txt  oprf.cpp  oprf.h
code/opaque/nr-oprf/PQ-MPC/: CMakeLists.txt
code/opaque/nr-oprf/PQ-MPC/emp-tool/: CMakeLists.txt
code/opaque/nr-oprf/PQ-MPC/emp-tool/io/: net-io.h
code/opaque/nr-oprf/PQ-MPC/pq-ot/: CMakeLists.txt  pq-ot.h  pq-otmain.h
code/opaque/opaque/: Makefile  benchmark  opaque-client  opaque-client.c  opaque-server  opaque-server.c  utils.c  utils.h
code/opaque/opaque-common/: opaque-common.c  opaque-common.h
code/opaque/openssl/oqs-scripts/: build_liboqs.sh
code/opaque/opus/: opus.c  opus.h
code/opaque/pq-opaque/: Makefile  README.md  benchmark  benchmark.c  opaque-client  opaque-client.c  opaque-server  opaque-server.c  utils.c  utils.h
code/opus/: .gitignore  Makefile  README.md  csidh.c  csidh.h  oprf_client.c  oprf_server.c  opus.c  prf.c  uint.h  update-prf.c
code/opus-psi/: CMakeLists.txt  README.md  bench_psi.py
code/opus-psi/bench/: opus_client_0_0  opus_server_0_0
code/opus-psi/opus-psi/: AES.cpp  AES.h  BitIterator.h  BitVector.cpp  BitVector.cpp.orig  BitVector.h  CMakeLists.txt  ChannelWrapper.cpp  ChannelWrapper.h  Defines.cpp  Defines.h  PRNG.cpp  PRNG.h  SecureRandom.cpp  SecureRandom.h
code/opus-psi/opus-psi/CSI-FiSh/: CMakeLists.txt  Makefile  classgroup.c  classgroup.h  constants.h  csidh.c  csidh.h  csifish.c  fp.c  merkletree.h  mont.c  parameters.h  uint.c
code/opus-psi/opus-psi/CSI-FiSh/p512/: constants.c
code/opus-psi/opus-psi/csidh-20210627/: 2  CMakeLists.txt  constants.h  csidh.c  csidh.h  csidh_prf.c  csidh_prf_opt.c  equivalence.c  fp.c  fp.h  fp2.h  groupaction.c  main.c  mont.c  mont.h  out.txt  params.h  prfs_take_too_long.txt  rng.c  uint.h  utils.h  utiltest
code/opus-psi/opus-psi/csidh-20210627/p512/: constants.c  fp.s  limbs.s  params.h
code/opus-psi/opus-psi/csidh-20210627/p512/inv/: fpinv511.c
code/opus-psi/opus-psi/csidh-20210627/trash/: Makefile  constants.c  main.c  params.h
code/opus-psi/opus-psi/latex.out/: .latexrun.db  texput.fls
code/opus-psi/opus-psi/test/: CMakeLists.txt  new_client  old_client  random.cpp  test_psi_oprf_ssinr.cpp  test_psi_opus_client.cpp  test_psi_opus_server.cpp
code/opus-psi/opus-psi/utils/: Log.cpp  Log.h
code/opus/files/: simple-client  simple-client.c  simple-server  simple-server.c  utils.h
code/p512/: params.h
csv-files/: noopt.csv  online.csv  opaque-client  opaque-client-nroprf  opaque-clientclassic  opaque-server  opaque-server-nroprf  opaque-serverclassic  opus.csv  prf_csifish.csv  prf_opus.csv  updatable.csv  updateable.csv  updateable2.csv
csv-files/nrot/: client_128.csv  client_256.csv  client_512.csv  keygen_128.csv  keygen_256.csv  keygen_512.csv  server_128.csv  server_256.csv  server_512.csv
csv-files/nrot-psi/: nrot_client_10_10  nrot_server_5_5  opus_client_0_0  opus_client_5_5  opus_server_0_0  opus_server_10_10
csv-files/opus-psi/: opus_client_0_0  opus_client_5_5  opus_server_0_0  opus_server_5_5
